name:                haskell-image-processing-benchmark
version:             0.1.0.0
synopsis:            Benchmark different Haskell image processing libraries
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-image-processing-benchmark
  main-is:             Main.hs
  other-modules:       HaskellImageProcessingBenchmark.Friday,
                       HaskellImageProcessingBenchmark.UnmHip,
                       HaskellImageProcessingBenchmark.Yarr,
                       HaskellImageProcessingBenchmark.Repa,
                       HaskellImageProcessingBenchmark.OpenCV
  -- other-extensions:    
  build-depends:       base == 4.7.*,
                       criterion == 1.0.2.0,
                       hip == 1.0.0.0,
                       friday == 0.2.2.0,
                       convertible == 1.*,
                       friday-devil == 0.1.1.1, 
                       unm-hip == 0.3.1.7,
                       yarr == 1.3.*,
                       yarr-image-io == 1.3.2.1,
                       repa == 3.3.1.*,
                       repa-devil == 0.3.2.6,
                       repa-algorithms == 3.3.1.*,
                       deepseq == 1.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -rtsopts -with-rtsopts=-N -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funbox-strict-fields -fexpose-all-unfoldings -funfolding-keeness-factor1000 -fsimpl-tick-factor=500 -fllvm -optlo-O3
  c-sources:           cbits/haskell_image_processing_benchmark_opencv.c
  extra-libraries:     opencv_core,opencv_highgui,opencv_imgproc